--- a/.github/workflows/organization.yml
+++ b/.github/workflows/organization.yml
@@ -10,40 +10,45 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform"
+    name: 'Terraform'
     runs-on: ubuntu-latest
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.ORGANIZATION_TERRAFORM_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.ORGANIZATION_TERRAFORM_AWS_SECRET_ACCESS_KEY }}
       TF_VAR_pgp_key: ${{ secrets.PGP_KEY }}
-      TF_VAR_ec2_public_key: ""
+      TF_VAR_ec2_public_key: ''
 
     steps:
       - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.0.3
+
+      - name: Terraform fmt
+        id: fmt
+        working-directory: 'accounts/organization'
+        run: terraform fmt -check
+        continue-on-error: true
 
       - name: Terraform Init
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.0
-          tf_actions_subcommand: "init"
-          tf_actions_working_dir: "accounts/organization"
-          tf_actions_comment: true
+        id: init
+        working-directory: 'accounts/organization'
+        run: terraform init
+
+      - name: Terraform Validate
+        id: validate
+        working-directory: 'accounts/organization'
+        run: terraform validate -no-color
 
       - name: Terraform Plan
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.0
-          tf_actions_subcommand: "plan"
-          tf_actions_working_dir: "accounts/organization"
-          tf_actions_comment: true
+        id: plan
+        working-directory: 'accounts/organization'
+        run: terraform plan -no-color
+        continue-on-error: true
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.14.0
-          tf_actions_subcommand: "apply"
-          tf_actions_working_dir: "accounts/organization"
-          tf_actions_comment: true
-          args: "-auto-approve"
+        id: apply
+        working-directory: 'accounts/organization'
+        run: terraform apply -auto-approve -no-color
